2010-11-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16365: htmlArea RTE: Delete compressed files when clearing RTE cache

2010-11-11  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16361: Javascript returns 'FALSE' instead of 'false' in class.tslib_content.php (Thanks to Krystian Szymukowicz)
	* Fixed bug #16307: Remove Workspace Module and Autopublishing from the system extension Version (Thanks to Tolleiv Nietsch)
	* Fixed bug #16311: move workspace-selector to sysext workspaces (Thanks to Tolleiv Nietsch)

2010-11-11  Oliver Hader  <oliver@typo3.org>

	* Added feature #16247: Integrate new workspace module based on ExtJS (thanks to Workspaces Team)

2010-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16314: Incorrect use of is_dir in class.tx_rtehtmlarea_clearrtecache.php (Thanks to Juergen Deisenroth)
	* Added feature #16345: User Tools>User settings: get csh from any specified csh file

2010-11-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16352: [saltedpasswords] Login with bulk updated passwords from t3sec_saltedpw not working (Thanks to Marcus Krause)

2010-11-10  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16032: Overwork tree frame design (Thanks to Lars Zimmermann)
	* Fixed bug #16335: Workspace Draft Records are shown in Live Workspace in some cases (Thanks to Joerg Kinast)

2010-11-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #8349: htmlArea RTE: Clean paste feature with three options
	* Fixed bug #16327: JS error after feature #16257: Rewrite stylesheets parsing functions (Thanks to Andreas Kiessling)
	* Added feature #16344: htmlArea RTE: New options to configure RTE size/resize
	* Fixed bug #16346: htmlArea RTE: fontstyle/fontsize may raise js error on toolbar update

2010-11-09  Jeff Segars <jeff@webempoweredchurch.org>

	* Fixed bug #16262: Link browser shows wrong title for pages and tt_content elements (Thanks to Reinhard Führicht)
